Adjust src and dest rects when drawing images instead of using a clip

This patch removes a clip recorder in ImagePainter and VideoPainter
and simply adjusts the rects passed to GraphicsContext::drawImage. This
also fixes several tests using spv2 which were not applying the
spv1-only clip.

There's a minor resampling artifact on three tests which, regrettably,
must be turned into pixel tests.

BUG=627145

Review-Url: https://codereview.chromium.org/2134253002
Cr-Commit-Position: refs/heads/master@{#405033}

Former-commit-id: e7678ecd5f7c5bbdbfb78df2d8269a79e06236d4