third_party/WebKit/Source/core/paint/ImagePainter.h
@@ -22,7 +22,10 @@ public:
 
     void paint(const PaintInfo&, const LayoutPoint& paintOffset);
     void paintReplaced(const PaintInfo&, const LayoutPoint& paintOffset);
-    void paintIntoRect(GraphicsContext&, const LayoutRect&);
+
+    // Paint the image into |destRect|, after clipping by |contentRect|. Both |destRect| and
+    // |contentRect| should be in local coordinates plus the paint offset.
+    void paintIntoRect(GraphicsContext&, const LayoutRect& destRect, const LayoutRect& contentRect);
 
 private:
     void paintAreaElementFocusRing(const PaintInfo&, const LayoutPoint& paintOffset);
